# solana-counter-sample

./: Anchor.toml  package.json
programs/counter-sample/: Cargo.toml
programs/counter-sample/src/: errors.rs  events.rs  lib.rs
programs/counter-sample/src/instructions/: increment.rs  mint_nft.rs  mod.rs  setup_counter.rs
programs/counter-sample/src/state/: counter.rs
scripts/: increment.ts  index.js
tests/: counter-sample.ts  index.js
